--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,6 @@
-
 <div>
   <h3>
-    Post #<%= @post.title %> by <%= @post.author.name %>
+    Post #<%= @post.id %><%= @post.title %> by <%= @post.author.name %>
     <span>comments: <%= @post.comments_counter %></span>, 
     <span>Likes: <%= @post.likes_counter %></span>
   </h3>
