add all post comments to posts#show

--- a/app/views/layouts/post_of_user.html.erb
+++ b/app/views/layouts/post_of_user.html.erb
@@ -1,4 +1,4 @@
-<a href="<%= post.id %>">
+<a href="posts/<%= post.id %>">
 <div>
   <h4>Post #<%= post.id %><%= post.title %></h4>
   <p><%= post.text %></p>
