--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,7 +8,7 @@
 </div>
 
 <ul>
-  <% @comments_all.each do |comment| %>
+  <% @comments.each do |comment| %>
     <li><b><%= comment.author.name %>:</b> <%= comment.text %></li>
   <% end %>
 </ul>
