--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with url: user_post_comments_path(post.author, post), method: :post, local: true, scope: :comment do |f| %>
+<%= form_with url: user_post_comments_path, method: :post, local: true, scope: :comment do |f| %>
   <div>
     <%= f.text_field :text, { placeholder: 'Add your comment', required: true } %>
     <%= f.submit 'Comment' %>
