--- a/app/views/layouts/user_of_post.html.erb
+++ b/app/views/layouts/user_of_post.html.erb
@@ -1,5 +1,5 @@
 <a title="Show" href="<%= user_path(author) %>">
-  <%= image_tag(author.photo) %>
+  <img src=<% author.photo %>
   <div>
     <h3><%= author.name %></h3>
     <p>Number of posts: <%= author.posts_counter || 0 %></p>
