add tests for post index and show

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <div>
   <h3>
-    Post #<%= @post.id %><%= @post.title %> by <%= @post.author.name %>
+    <span>Post #<%= @post.id %><%= @post.title %></span> <span>by <%= @post.author.name %></span>
     <span>comments: <%= @post.comments_counter %></span>, 
     <span>Likes: <%= @post.likes_counter %></span>
   </h3>
