--- a/app/views/layouts/post_of_user.html.erb
+++ b/app/views/layouts/post_of_user.html.erb
@@ -1,4 +1,4 @@
-<a href="posts/<%= post.id %>">
+<%= link_to user_post_path(post.author, post) do %>
 <div>
   <h4>Post #<%= post.id %><%= post.title %></h4>
   <p><%= post.text %></p>
@@ -7,5 +7,5 @@
     <span>Likes: <%= post.likes_counter || 0 %></span>
   </p>
 </div>
-<a>
+<% end %>
 
