--- a/app/views/layouts/user_of_post.html.erb
+++ b/app/views/layouts/user_of_post.html.erb
@@ -6,5 +6,8 @@
     <p>Number of posts: <%= author.posts_counter || 0 %></p>
   </div>
 </a>
-
+<% if user_signed_in? %>
 <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+<% else %>
+ <%= link_to "Login", new_user_session_path %>
+<% end %>
