Add comment functionality

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,13 +1,13 @@
 <%= render(template: 'layouts/user_of_post', locals: {author: @author}) %>
+ <br>
 <%= link_to 'Add New Post', new_user_post_path(@author) %>
 
 <% @posts.each do |post| %>
-  <div><%= render(template: 'layouts/post_of_user', locals: {post: post}) %></div>
+  <div><br><%= render(template: 'layouts/post_of_user', locals: {post: post}) %></div>
   <ul>
     <%= render 'details/comment', post: post %>
   </ul>
 <% end %>
-
 
 
 <button type="button" class="pagination">Pagination</button>
